Style update for CV link in author profile
Updated the CV link to use a button style and adjusted margin.

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -112,9 +112,9 @@
       {% if author.orcid %}
         <li><a href="{{ author.orcid }}"><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
       {% endif %}
-      <li>
-        <a href="/docs/Hong_Lang_CV.pdf" target="_blank" rel="noopener">
-          <i class="fas fa-fw fa-file-pdf" aria-hidden="true"></i> CV (PDF)
+      <li style="margin-top: 0.6em;">
+        <a class="btn btn--inverse btn--small" href="/docs/Hong_Lang_CV.pdf" target="_blank" rel="noopener">
+          <i class="fas fa-download" aria-hidden="true"></i> CV (PDF)
         </a>
       </li>
       {% if author.impactstory %}
