--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -214,6 +214,9 @@
       {% if author.orcid %}
         <a href="{{ author.orcid }}"><i class="ai ai-orcid-square ai-fw"></i></a>
       {% endif %}
+      <a href="{{ '/files/Hong_Lang_CV.pdf' | relative_url }}" target="_blank" rel="noopener">
+        <i class="fas fa-file-pdf" aria-hidden="true"></i>
+      </a>
       {% if author.impactstory %}
         <a href="{{ author.impactstory }}"><i class="ai ai-impactstory ai-fw"></i></a>
       {% endif %}
