--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -214,13 +214,9 @@
       {% if author.orcid %}
         <a href="{{ author.orcid }}"><i class="ai ai-orcid-square ai-fw"></i></a>
       {% endif %}
-      <div style="margin-top: 0.6em;">
-        <a class="btn btn--inverse btn--small"
-           href="{{ '/files/Hong_Lang_CV.pdf' | relative_url }}"
-           target="_blank" rel="noopener">
-          CV
-        </a>
-      </div>
+      <a href="{{ '/files/Hong_Lang_CV.pdf' | relative_url }}" target="_blank" rel="noopener">
+        <i class="fas fa-file-pdf" aria-hidden="true"></i>
+      </a>
       {% if author.impactstory %}
         <a href="{{ author.impactstory }}"><i class="ai ai-impactstory ai-fw"></i></a>
       {% endif %}
